--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
   },
   "homepage": "https://github.com/FaiyadRahman/Whisper-Clone#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "md5": "^2.3.0",
     "mongoose": "^6.8.3",
     "mongoose-encryption": "^2.1.2"
   }
